--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,6 @@ theme: landscape
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:bob12358/bob12358.github.io.git
+  branch: master
