--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
    - engine
 before_install:
   - openssl aes-256-cbc -K $encrypted_db53c01d6abb_key -iv $encrypted_db53c01d6abb_iv
-  -in travisci_rsa.enc -out ~\/.ssh/travisci_rsa -d
+  -in .travis/travisci_rsa.enc -out ~\/.ssh/travisci_rsa -d
   - chmod 600 ~/.ssh/travisci_rsa
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/travisci_rsa
