--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ branches:
   only:
    - engine
 before_install:
-  - openssl aes-256-cbc -K $encrypted_db53c01d6abb_key -iv $encrypted_db53c01d6abb_iv
-  -in .travis/travisci_rsa.enc -out ~\/.ssh/travisci_rsa -d
+  - openssl aes-256-cbc -K $encrypted_db53c01d6abb_key -iv $encrypted_db53c01d6abb_iv -in .travis/travisci_rsa.enc -out ~\/.ssh/travisci_rsa -d
   - chmod 600 ~/.ssh/travisci_rsa
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/travisci_rsa
