--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ branches:
   only:
    - engine
 before_install:
-  - openssl aes-256-cbc -K $encrypted_db53c01d6abb_key -iv $encrypted_db53c01d6abb_iv -in .travis/travisci_rsa.enc -out ~\/.ssh/travisci_rsa -d
-  - chmod 600 ~/.ssh/travisci_rsa
+  - openssl aes-256-cbc -K $encrypted_db53c01d6abb_key -iv $encrypted_db53c01d6abb_iv -in .travis/travisci_rsa.enc -out ~/.ssh/id_rsa -d
+  - chmod 600 ~/.ssh/id_rsa
   - eval $(ssh-agent)
-  - ssh-add ~/.ssh/travisci_rsa
+  - ssh-add ~/.ssh/id_rsa
   - cp .travis/ssh_config ~/.ssh/config
   - git config --global user.email "373446951@qq.com"
   - git config --global user.name "bob12358"
