--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
    - engine
 before_install:
-  - openssl aes-256-cbc -K $encrypted_9d9975ecae4c_key -iv $encrypted_9d9975ecae4c_iv -in .travis/travis_rsa.enc -out ~\/.ssh/id_rsa -d
+  - openssl aes-256-cbc -K $encrypted_9d9975ecae4c_key -iv $encrypted_9d9975ecae4c_iv -in .travis/travis_rsa.enc -out ~\/.ssh\/id_rsa -d
   - chmod 600 ~/.ssh/id_rsa
   - eval $(ssh-agent)
   - ssh-add ~/.ssh/id_rsa
