--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
 - cp .travis/ssh_config ~/.ssh/config
-- git config --global user.email "zhangjunchao2015@hotmail.com"
+- git config --global user.email "373446951@qq.com"
 - git config --global user.name "bob12358"
 install:
 - npm install hexo-cli -g
